change h1 for small mobile sizes to prevent sticking outside of div

--- a/css/typography.css
+++ b/css/typography.css
@@ -12,6 +12,13 @@ h1 {
     font-size: 2.5em;
 }
 
+/* for small mobile sizes the h1 extends outside of div */
+@media only screen and (max-width: 375px) {
+    h1 {
+        font-size: 2.0em;
+    }
+}
+
 h2 {
     font-weight: bold;
     font-size: 2.0em;
